refreshed main picture

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,3 +1,11 @@
+body {
+	background-image: url(../images/back_ground_1.jpeg),
+		linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, .6));
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-attachment: fixed
+}
+
 header {
 	display: flex;
 	position: fixed;
@@ -30,9 +38,11 @@ header a {
 }
 
 body {
+	color: white;
 	margin: 0;
 	margin-top: 50px;
-	font-family: sans-serif; /* Add this line */
+	font-family: sans-serif;
+	margin: 0;
 }
 
 section {
